--- a/docker/k8s/node.yaml
+++ b/docker/k8s/node.yaml
@@ -7,7 +7,7 @@ spec:
     matchLabels:
       app: node # has to match .spec.template.metadata.labels
   serviceName: "node"
-  replicas: 1
+  replicas: 5
 #  minReadySeconds: 10 # by default is 0
   template:
     metadata:
@@ -17,29 +17,27 @@ spec:
 #      terminationGracePeriodSeconds: 10
       containers:
         - name: node
+          image: jepsen-node
           # Not sure why this is needed, but the compose file adds it.
           tty: true
           securityContext:
             privileged: true
-#            readOnlyRootFilesystem: false
             capabilities:
               add:
                 - ALL
-#          command:
-#            - bash
-#            - -c
-#            - "while date; do sleep 10; done"
-          image: node
           ports:
             - containerPort: 22
               name: ssh
           volumeMounts:
-            #     - /run:size=100M
-            #    - /run/lock:size=100M
             - mountPath: /run
               name: run
 #            - mountPath: /run/lock
 #              name: run-lock
+#            - name: ssh-secrets
+            - name: ssh-secrets
+              mountPath: /root/.ssh/authorized_keys
+              subPath: authorized_keys
+              readOnly: true
       volumes:
         - name: run
           emptyDir:
@@ -47,49 +45,12 @@ spec:
 #        - name: run-lock
 #          emptyDir:
 #            sizeLimit: 100M
-
-#          volumeMounts:
-#            - name: ssh-secrets
-#              mountPath: /root/.ssh/id_rsa
-#              subPath: id_rsa
-#              readOnly: true
-#            - name: ssh-secrets
-#              mountPath: /root/.ssh/id_rsa.pub
-#              subPath: id_rsa.pub
-#              readOnly: true
-#            - name: ssh-secrets
-#              mountPath: /root/.ssh/authorized_keys
-#              subPath: authorized_keys
-#              readOnly: true
-#      volumes:
-#        - name: ssh-secrets
-#
-#          secret:
-##            defaultMode: 420,
-#            # Because OpenSSL strictly requires locked down permissions on its .ssh directory,
-#            # we must ensure that these secrets get mounted with the appropriate permissions.
-#            defaultMode: 0600
-#            secretName: id-rsa
-#            items:
-#              - key: id_rsa
-#                path: id_rsa
-#              - key: id_rsa.pub
-#                path: id_rsa.pub
-#              - key: authorized_keys
-#                path: authorized_keys
-
-#            - name: jepsen-shared
-#              mountPath: /var/jepsen/shared
-#    volumeClaimTemplates:
-#      - metadata:
-#          name: jepsen-shared
-#        spec:
-#          accessModes: [ "ReadWriteMany" ]
-#          storageClassName: "host-mount"
-#          resources:
-#            requests:
-#              storage: 1Gi
-
+        - name: ssh-secrets
+          secret:
+            # Because OpenSSL strictly requires locked down permissions on its .ssh directory,
+            # we must ensure that these secrets get mounted with the appropriate permissions.
+            defaultMode: 0600
+            secretName: id-rsa
 
 ---
 
