--- a/docker/kustomization.yaml
+++ b/docker/kustomization.yaml
@@ -2,12 +2,12 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - control.yaml
-  - node.yaml
+  - k8s/node.yaml
+  - k8s/control.yaml
 
 secretGenerator:
   - name: id-rsa
     files:
-      - id_rsa
-      - id_rsa.pub
-      - authorized_keys
+      - secret/id_rsa
+      - secret/id_rsa.pub
+      - secret/authorized_keys
